Ajuste botao voltar

--- a/Paginas/atalhos.html
+++ b/Paginas/atalhos.html
@@ -78,7 +78,9 @@
             </ul>
         </nav><br>
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
         <h1> Atalhos CSTI - Templates N2</h1>
 
