--- a/Paginas/atalhos_smp.html
+++ b/Paginas/atalhos_smp.html
@@ -65,8 +65,10 @@
         </ul>
     </nav>
     <div class="voltar">
-        <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-    </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
     <article id="article-a">
         <h1> Atalhos CSTI - Templates para Abertura de Tarefas SMP</h1>
         <div id="div1">
