--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -61,7 +61,9 @@ document.addEventListener('DOMContentLoaded', () => {
         <br><br>
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <article id="article-f">
