--- a/Paginas/cidades.html
+++ b/Paginas/cidades.html
@@ -71,8 +71,10 @@
     </style>
 
     <div class="voltar">
-        <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-    </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
     <table id="tabela_cidades">
         <thead>
