--- a/Paginas/digitalizacao.html
+++ b/Paginas/digitalizacao.html
@@ -68,7 +68,9 @@
         </nav><br />
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <table id="tabela_digitalizacao">
