--- a/Paginas/glossario.html
+++ b/Paginas/glossario.html
@@ -56,7 +56,9 @@
         <br>
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <div id="div_glossario"><h1 align="left"><font style="font-family: Courier New, monospace;"> Glossário</font></h1></div>
