--- a/Paginas/malote.html
+++ b/Paginas/malote.html
@@ -65,8 +65,10 @@
         <div id="div5" align="center">
 
             <div class="voltar">
-                <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-            </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
             <h2>Filtro de Cidades</h2>
             <br>
