--- a/Paginas/orientacoes.html
+++ b/Paginas/orientacoes.html
@@ -47,8 +47,10 @@
         <div id="div9">
 
             <div class="voltar">
-                <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-            </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
             <div style='background-color:#FFF5EE'>
                 <article id="article-a">
