--- a/Paginas/paginan2.html
+++ b/Paginas/paginan2.html
@@ -60,7 +60,9 @@
         <br>
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <div id="container">
