--- a/Paginas/procedimentos.html
+++ b/Paginas/procedimentos.html
@@ -119,7 +119,9 @@
         <div id="div_tit_proc"><h2 id="h2_filtro"> Lista dos Procedimentos mais Utilizados pela CSTI</h2></div>
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <div id="divProcedimentos">
