--- a/Paginas/ramais.html
+++ b/Paginas/ramais.html
@@ -39,7 +39,9 @@
         <h2 id="h2_filtro"> Lista de Contatos de Unidades do TRT9 </h2><br>
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <div id="divRamais">
