--- a/Paginas/rangeip.html
+++ b/Paginas/rangeip.html
@@ -55,7 +55,9 @@
     <div align="center">
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <br><br><h2><font size="5"> Range de IP dos Locais</font></h2><br><br>
