--- a/Paginas/redirecionamento.html
+++ b/Paginas/redirecionamento.html
@@ -158,7 +158,9 @@
                 <div id="div_filtro" align="center">
 
                     <div class="voltar">
-                        <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+                         <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+                          <i class="fa-solid fa-arrow-up"></i>
+                         </button>
                     </div>
                     
                     <div align="center" id="div_filtro">
