--- a/Paginas/status.html
+++ b/Paginas/status.html
@@ -55,8 +55,10 @@
       <div align="center">
 
           <div class="voltar">
-              <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-          </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
           <br><br><div id="titulo_status"><h3 style="text-align: left;"><font size="5" style="font-family: Courier New, monospace;"> Status CMDB dos Equipamentos de TI</font></h3></div></br>
 
