--- a/Paginas/tokens.html
+++ b/Paginas/tokens.html
@@ -63,7 +63,9 @@
 
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
         <div align="left" id="div_tokens">
 
