--- a/Paginas/528.html
+++ b/Paginas/528.html
@@ -62,8 +62,10 @@
           </style>
 
           <div class="voltar">
-              <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-          </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
           <nav id="menu4">
               <ul>
