--- a/Paginas/calculo.html
+++ b/Paginas/calculo.html
@@ -66,8 +66,10 @@
 
 
           <div class="voltar">
-              <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-          </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
           <div class="row justify-content-center mb-5">
               <div class="col-sm-10 col-md-8 col-lg-6">
