--- a/Paginas/garantia.html
+++ b/Paginas/garantia.html
@@ -66,8 +66,10 @@
 	</nav>
 
 	<div class="voltar">
-		<button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-	</div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
 	<script>
 		function gerar() {
