--- a/Paginas/paginan1.html
+++ b/Paginas/paginan1.html
@@ -76,7 +76,9 @@
         <br>
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <div id="container">
