--- a/Paginas/sessao.html
+++ b/Paginas/sessao.html
@@ -323,8 +323,10 @@
 	</nav>
 
 	<div class="voltar">
-		<button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-	</div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
 	<article id="article-a">
 
