--- a/Paginas/sistemas.html
+++ b/Paginas/sistemas.html
@@ -93,8 +93,10 @@
                 <div id="div_filtro" align="center">
 
                     <div class="voltar">
-                        <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-                    </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
                     <div align="center" id="div_filtro">
 
                         <ul>
