--- a/Paginas/termos.html
+++ b/Paginas/termos.html
@@ -59,8 +59,10 @@
           <br><br>
 
           <div class="voltar">
-              <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
-          </div>
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
 
           <div id="div-doc">
               <table id="tabela_termos">
