--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <!-- Versionamento JS e CSS-->
     
-    <link rel="stylesheet" href="index.css?v=0.1.12">
-    <link rel="stylesheet" href="styles.css?v=0.1.12">
+    <link rel="stylesheet" href="index.css?v=0.1.13">
+    <link rel="stylesheet" href="styles.css?v=0.1.13">
     <script src="script_index.js?v=0.1.9" defer></script>
 </head>
 <body>
@@ -137,7 +137,9 @@ document.addEventListener("DOMContentLoaded", function () {
     <article id="article-b">
 
         <div class="voltar">
-            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()" />
+            <button id="BotaoVoltar" alt="Voltar ao Topo" title="Voltar ao Topo" onclick="scrollToTop()">
+             <i class="fa-solid fa-arrow-up"></i>
+            </button>
         </div>
 
         <h2> <font size="4" style="font-family: Courier New, monospace"> PÁGINA DE APOIO AO N1 E N2 - INFORMAÇÕES E RECURSOS UTILIZADOS PELA CSTI.</font></h2>
