--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -319,9 +319,18 @@ document.addEventListener('DOMContentLoaded', () => {
                                <span class="aviso-data">16/12/2025</span>.
                             </p>
                         </li><br>
+                        <li class="aviso" data-data="2025-12-16">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas com a Suspensão e Encerramento de Tarefas no Assyst".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543091</span>.
+                                      Data:
+                               <span class="aviso-data">16/12/2025</span>.
+                            </p>
+                        </li><br>
                     </ul>
 
-                    <p id="ancora_avisos"></p>
                 </div>
 
         <button id="exportarLista"onclick="exportarCSV()"><i class="bi bi-file-earmark-excel"></i> Exportar</button>
@@ -432,6 +441,10 @@ function exportarCSV() {
             color: white;
         }
     </style>
+
+    <div style="padding-top: 200px;">
+
+    </div>
 
         </article>
         <br><br><br><br>
