--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@ document.addEventListener("DOMContentLoaded", function () {
                         <li class="aviso" data-data="2025-12-09">
                             <p class="aviso-texto">
                                <span class="aviso-titulo">ORIENTAÇÃO:</span>
-                                     "Problema de Habilitação no PJe" - É um defeito da versão atual e será corrigido futuramente. Para evitar, finalize a Solicitação de 
-                                      Habilitação no mesmo momento em que iniciar. Se o erro já ocorreu, tente novamente após 1 hora; se persistir, contate a Vara ou Gabinete responsável. 
+                                     "Problema de Habilitação no PJe - É um defeito da versão atual e será corrigido futuramente. Para evitar, finalize a Solicitação de 
+                                      Habilitação no mesmo momento em que iniciar. Se o erro já ocorreu, tente novamente após 1 hora; se persistir, contate a Vara ou Gabinete responsável". 
                                       Tarefa:
                                       <span class="aviso-tarefa">541237</span>.
                                       Data:
@@ -171,8 +171,8 @@ document.addEventListener("DOMContentLoaded", function () {
                         <li class="aviso" data-data="2025-12-09">
                             <p class="aviso-texto">
                                <span class="aviso-titulo">ORIENTAÇÃO:</span>
-                                     "Problemas para Designação de Perícias no PJe" - É um defeito da versão atual e será corrigido futuramente. Seguir conforme procedimento:
-                                      <a id="a_avisos" href="https://www.trt9.jus.br/cswiki/index.php?curid=35149" target="_blank">Sistema - PJe - Erro na Designação da Perícia</a>.
+                                     "Problemas para Designação de Perícias no PJe - É um defeito da versão atual e será corrigido futuramente. Seguir conforme procedimento:
+                                      <a id="a_avisos" href="https://www.trt9.jus.br/cswiki/index.php?curid=35149" target="_blank">Sistema - PJe - Erro na Designação da Perícia</a>".
                                       Tarefa:
                                <span class="aviso-tarefa">541276</span>.
                                       Data:
@@ -183,7 +183,7 @@ document.addEventListener("DOMContentLoaded", function () {
                         <li class="aviso" data-data="2025-12-16">
                             <p class="aviso-texto">
                                <span class="aviso-titulo">FALHA GERAL:</span>
-                                     "Problema no sistema de Telefonia" - Erro ao tentar realizar e receber ligações externas e internas.
+                                     "Problema no sistema de Telefonia - Erro ao tentar realizar e receber ligações externas e internas".
                                       Tarefa:
                                <span class="aviso-tarefa">543067</span>.
                                       Data:
