--- a/index.html
+++ b/index.html
@@ -191,6 +191,29 @@ document.addEventListener("DOMContentLoaded", function () {
                             </p>
                         </li><br>
 
+                        <li class="aviso" data-data="2025-12-17">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas nos robôs RJ1 e RJ7 - Não gera link de audiência".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543100</span>.
+                                      Data:
+                               <span class="aviso-data">17/12/2026</span>.
+                            </p>
+                        </li><br>
+
+                        <!--
+                        <li class="aviso" data-data="2026-xx-xx">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">XXXXX:</span>
+                                     "XXXXX".
+                                      Tarefa:
+                               <span class="aviso-tarefa">XXXXX</span>.
+                                      Data:
+                               <span class="aviso-data">xx/xx/2026</span>.
+                            </p>
+                        </li><br>
+                        -->
                         <p><a id="link-consultar-avisos" href="Paginas/avisos.html">Consultar avisos anteriores...</a></p>
                     </ul>
 
