Adição de avisos

--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -153,6 +153,24 @@ document.addEventListener('DOMContentLoaded', () => {
                         </li><br>
                         <li class="aviso" data-data="2025-12-09">
                             <p class="aviso-texto">
+                               <span class="aviso-titulo">ORIENTAÇÃO:</span>
+                                     "Problema de Habilitação no PJe - É um defeito da versão atual e será corrigido futuramente. Para evitar, finalize a Solicitação de 
+                                      Habilitação no mesmo momento em que iniciar. Se o erro já ocorreu, tente novamente após 1 hora; se persistir, contate a Vara ou Gabinete responsável". 
+                                      Data:
+                               <span class="aviso-data">09/12/2025</span>.
+                            </p>
+                        </li><br>
+                        <li class="aviso" data-data="2025-12-09">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">ORIENTAÇÃO:</span>
+                                     "Problemas para Designação de Perícias no PJe - É um defeito da versão atual e será corrigido futuramente. Seguir conforme procedimento:
+                                      <a id="a_avisos" href="https://www.trt9.jus.br/cswiki/index.php?curid=35149" target="_blank">Sistema - PJe - Erro na Designação da Perícia</a>".
+                                      Data:
+                               <span class="aviso-data">09/12/2025</span>.
+                            </p>
+                        </li><br>
+                        <li class="aviso" data-data="2025-12-09">
+                            <p class="aviso-texto">
                                <span class="aviso-titulo">FALHA GERAL:</span>
                                      "Problemas para se logar na VPN - Ocorre somente em equipamentos dentro do domínio do TRT9".
                                       Tarefa:
@@ -199,6 +217,26 @@ document.addEventListener('DOMContentLoaded', () => {
                                <span class="aviso-tarefa">543091</span>.
                                       Data:
                                <span class="aviso-data">16/12/2025</span>.
+                            </p>
+                        </li><br>
+                        <li class="aviso" data-data="2025-12-16">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problema no sistema de Telefonia - Erro ao tentar realizar e receber ligações externas e internas".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543067</span>.
+                                      Data:
+                               <span class="aviso-data">16/12/2025</span>.
+                            </p>
+                        </li><br>
+                        <li class="aviso" data-data="2025-12-17">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas nos robôs RJ1 e RJ7 - Não gera link de audiência".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543100</span>.
+                                      Data:
+                               <span class="aviso-data">17/12/2026</span>.
                             </p>
                         </li><br>
                     </ul>
