--- a/index.html
+++ b/index.html
@@ -176,17 +176,6 @@ document.addEventListener("DOMContentLoaded", function () {
                             </p>
                         </li><br>
 
-                        <li class="aviso" data-data="2025-12-16">
-                            <p class="aviso-texto">
-                               <span class="aviso-titulo">FALHA GERAL:</span>
-                                     "Problema no sistema de Telefonia - Erro ao tentar realizar e receber ligações externas e internas".
-                                      Tarefa:
-                               <span class="aviso-tarefa">543067</span>.
-                                      Data:
-                               <span class="aviso-data">16/12/2025</span>.
-                            </p>
-                        </li><br>
-
                         <li class="aviso" data-data="2025-12-17">
                             <p class="aviso-texto">
                                <span class="aviso-titulo">FALHA GERAL:</span>
@@ -195,6 +184,17 @@ document.addEventListener("DOMContentLoaded", function () {
                                <span class="aviso-tarefa">543100</span>.
                                       Data:
                                <span class="aviso-data">17/12/2026</span>.
+                            </p>
+                        </li><br>
+
+                        <li class="aviso" data-data="2025-12-17">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Painel do Elastic da Telefonia da CSTI".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543108</span>.
+                                      Data:
+                               <span class="aviso-data">17/12/2025</span>.
                             </p>
                         </li><br>
 
@@ -210,7 +210,7 @@ document.addEventListener("DOMContentLoaded", function () {
                             </p>
                         </li><br>
                         -->
-                        <p><a id="link-consultar-avisos" href="Paginas/avisos.html">Consultar avisos anteriores...</a></p>
+                        <p><a id="link-consultar-avisos" href="Paginas/avisos.html">Consultar histórico de avisos...</a></p>
                     </ul>
 
                     
