--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -70,7 +70,7 @@ document.addEventListener('DOMContentLoaded', () => {
             <div style='background-color:#FFF5EE;  border-radius: 10px;'>
                 <div id="div3">
                     <h2> <font size="4" style="font-family: Courier New, monospace; color: #ef314c;"> AVISOS!</font></h2><br>
-                    <ul class="painel-de-avisos" style="padding-left: 10px;">
+                    <ul class="painel-de-avisos" style="padding: 0px 30px 30px 20px;">
                         <li class="aviso" data-data="2024-07-27">
                             <p class="aviso-texto">
                                <span class="aviso-titulo">COMUNICADO:</span>
