ajustes avisos e procedimentos

--- a/Paginas/procedimentos.html
+++ b/Paginas/procedimentos.html
@@ -374,7 +374,8 @@
                         Sistema - PJe Mídias - Audiência Digital - Disponibilizar Somente Gravação de Áudio, PJe - Dificuldades para arquivar processos a partir da versão 2.9.5, PJe - 'Usuário não encontrado' ao Tentar Recuperar a Senha,
                         Sistema - PJe - Usuário Bloqueado, Sistema - PJe - Informações Sobre Cadastro de Advogado, Sistema - PJe - Erro na Assinatura (PJe-ASN-011), Sistema - PJe - Movimentos Processuais na Timeline do Processo, Sistema - PJe - e-Carta - Verificar Limite de Caracteres,
                         Sistema - Orientações - Cursos do EAD, Sistema - PJe - Acessar o PJe Sem Certificado Digital, FAQS:Sistema - PJe - Cadastro de Assistente de Advogado no PJe, Sistema - PJe - Envio de Senha para Consulta Pública do Processo – Público Externo, 
-                        Sistema - PJe - Cadastro de Cidadão e Acesso a Processos, Sistema - PJe Mídias - Falha para Visualizar Mídias Sincronizadas, PJe Mídias - Audiência Digital - Vídeos em Segredo de Justiça, Sistema - PJe - Erro na Inserção da Parte no Processo --> 
+                        Sistema - PJe - Cadastro de Cidadão e Acesso a Processos, Sistema - PJe Mídias - Falha para Visualizar Mídias Sincronizadas, PJe Mídias - Audiência Digital - Vídeos em Segredo de Justiça, Sistema - PJe - Erro na Inserção da Parte no Processo,
+                        Sistema - PJe - Autenticação MFA Obrigatória Usuários Externos --> 
                         <!-- Cadastramento, Acessar o PJe, Cadastro PJe, Cadastro Servidor, Cadastro Magistrado--> <!-- Atribuir, Perfil de Diretor --> <!-- Alteração de Nome da Parte --> <!-- Habilitar --> <!-- Montar Polo Passivo, Erro ao Tentar Remessar ao 2º Grau, Segundo --> 
                         <!-- Coordenadoria de Apoio as Varas --> <!-- Correção de Nome de Parte, das Partes, Alteração de nome de Parte, Retificação de Nome de Parte, 
                         Retificação do Polo Passivo, Retificar, Alterar, Corrigir --> <!-- PJe Mídias, PJe Midias, Limite Máximo, Limite Maximo, Tamanho de Arquivos PJe, PJe Limite, PJe 10 MB, Sistema - PJe - Erro: O usuário não está ativo --> 
@@ -386,6 +387,7 @@
                         <!-- Distribuição, Distribuicao, Coordenadoria de Apoio às Varas, Coordenadoria de Apoio as Varas, Divisão Judiciária ao Segundo Grau, Divisao Judiciaria do Segundo Grau -->
                         <!-- Assinatura Externa, Assinatura Gov, Gov.br --> <!-- Movimentos Ocultos, visualização dos movimentos processuais no sistema PJe --><!-- ecarta, e carta, 2/3 de um página A4, 2/3 A4, pagina A4 -->
                         <!-- Cadastro e Acesso da Parte ao Processo --> <!-- PJe Midias, Midias Sincronizadas, Sincronização, Atribuir Visibilidade, Visualização --> <!-- CNPJ Filial, CNPJ Matriz, Casas Bahia, BA -->
+                        <!-- 2FA Advogados, Advogado, Google Authenticator, Autenticator, Autenticador -->
                     </h4><br></li>
 
                     <li>
@@ -563,6 +565,10 @@
                     <li>
                         <p>Sistema - PJe - Erro na Inserção da Parte no Processo <!-- Filtro 8, Procedimentos Sobre o PJe, Todos --> <!-- CNPJ Filial, CNPJ Matriz, Casas Bahia, BA --></p>
                         <p>Link do Procedimento: <a id="a1" href="https://www.trt9.jus.br/cswiki/index.php?curid=34227" target="blank">https://www.trt9.jus.br/cswiki/index.php?curid=34227</a></p><br>
+                    </li>
+                    <li>
+                        <p>Sistema - PJe - Autenticação MFA Obrigatória Usuários Externos <!-- Filtro 8, Procedimentos Sobre o PJe, Todos --> <!-- 2FA Advogados, Advogado, Google Authenticator, Autenticator, Autenticador --></p>
+                        <p>Link do Procedimento: <a id="a1" href="https://www.trt9.jus.br/cswiki/index.php?curid=34950" target="blank">https://www.trt9.jus.br/cswiki/index.php?curid=34950</a></p><br>
                     </li>
 
 
