--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -239,6 +239,19 @@ document.addEventListener('DOMContentLoaded', () => {
                                <span class="aviso-data">17/12/2026</span>.
                             </p>
                         </li><br>
+                                                <li class="aviso" data-data="2025-12-17">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Painel do Elastic da Telefonia da CSTI".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543108</span>.
+                                      Data:
+                               <span class="aviso-data">17/12/2025</span>.
+                            </p>
+                        </li><br>
+
+
+
                     </ul>
 
                 </div>
