--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -249,8 +249,16 @@ document.addEventListener('DOMContentLoaded', () => {
                                <span class="aviso-data">17/12/2025</span>.
                             </p>
                         </li><br>
-
-
+                        <li class="aviso" data-data="2025-12-17">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas para Receber o Token de Acesso no Email (2FA)".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543155</span>.
+                                      Data:
+                               <span class="aviso-data">17/12/2025</span>.
+                            </p>
+                        </li><br>
 
                     </ul>
 
