--- a/index.html
+++ b/index.html
@@ -187,6 +187,17 @@ document.addEventListener("DOMContentLoaded", function () {
                             </p>
                         </li><br>
 
+                        <li class="aviso" data-data="2025-12-17">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas para Receber o Token de Acesso no Email (2FA)".
+                                      Tarefa:
+                               <span class="aviso-tarefa">543155</span>.
+                                      Data:
+                               <span class="aviso-data">17/12/2025</span>.
+                            </p>
+                        </li><br>
+
                         <!--
                         <li class="aviso" data-data="2026-xx-xx">
                             <p class="aviso-texto">
