--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -66,6 +66,8 @@ document.addEventListener('DOMContentLoaded', () => {
             </button>
         </div>
 
+        <h2> <font size="4" style="font-family: Courier New, monospace">HISTÓRICO DE AVISOS ENVIADOS PELA CSTI.</font></h2>
+
         <article id="article-f">
             <div style='background-color:#FFF5EE;  border-radius: 10px;'>
                 <div id="div3">
