--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -44,18 +44,29 @@
         });
     </script>
 
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const botao = document.getElementById('exportarLista');
+    <script>
+    document.addEventListener('DOMContentLoaded', () => {
+    const botao = document.getElementById('exportarLista');
 
-  if (botao) {
-    botao.scrollIntoView({
-      behavior: 'smooth',
-      block: 'nearest'
+    if (botao) {
+        botao.scrollIntoView({
+        behavior: 'smooth',
+        block: 'nearest'
+        });
+    }
     });
-  }
-});
-</script>
+
+    function rolarParaExportar() {
+    const botao = document.getElementById('exportarLista');
+
+    if (!botao) return;
+
+    botao.scrollIntoView({
+        behavior: 'smooth',
+        block: 'nearest'
+    });
+    }
+    </script>
 
 
     <article id="article-b">
@@ -431,8 +442,8 @@ document.addEventListener('DOMContentLoaded', () => {
                 id="filtroDataFim"
             >
 
-            <button onclick="aplicarFiltro()">Filtrar</button>
-            <button onclick="limparFiltro()">Limpar</button>
+            <button onclick="aplicarFiltro(); rolarParaExportar();">Filtrar</button>
+            <button onclick="limparFiltro(); rolarParaExportar();">Limpar</button>
             <button id="exportarLista"onclick="exportarCSV()" style="margin-top: 5px;"><i class="bi bi-file-earmark-excel"></i> Exportar</button>
 
         </div>
