--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -63,7 +63,7 @@
 
     botao.scrollIntoView({
         behavior: 'smooth',
-        block: 'nearest'
+        block: 'center'
     });
     }
     </script>
